force-app/main/default/objects/Transactions__c/Transactions__c.object-meta.xml
<CustomObject>
    <description>Movimentos das Contas Bancárias.</description>
    <label>Movimento</label>
    <nameField>
        <displayFormat>M-{YYYY}/{0}</displayFormat>
        <label>Movimento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movimentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>