force-app/main/default/objects/Transactions__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <inlineHelpText>A conta bancária deste movimento.</inlineHelpText>
    <label>Conta Bancária</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Movimentos</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>