force-app/main/default/objects/Transactions__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Movimentos</relationshipName>
    <type>Lookup</type>
</CustomField>