force-app/main/default/objects/Transactions__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Data da operação/movimento.</inlineHelpText>
    <label>Data</label>
    <type>Date</type>
</CustomField>