force-app/main/default/objects/Transactions__c/fields/Ignore_Budget_Control__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Budget_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ignore this amount on Budget Control (exclue for example VAT).</inlineHelpText>
    <label>Ignore (Budget Control)</label>
    <type>Checkbox</type>
</CustomField>