force-app/main/default/objects/Transactions__c/fields/Ignore_Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Cash_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ignore this amount on Cash Flow.</inlineHelpText>
    <label>Ignore (Cash Flow)</label>
    <type>Checkbox</type>
</CustomField>