force-app/main/default/objects/Transactions__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <inlineHelpText>Nota adicional.</inlineHelpText>
    <label>Nota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>