force-app/main/default/objects/Transactions__c/listViews/Este_m_s.listView-meta.xml
<ListView>
    <fullName>Este_m_s</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>ESTE MÊS</label>
</ListView>