force-app/main/default/objects/Transactions__c/listViews/M_S_ANTERIOR.listView-meta.xml
<ListView>
    <fullName>M_S_ANTERIOR</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Budget__c</columns>
    <columns>Ignore_Budget_Control__c</columns>
    <columns>Ignore_Cash_Flow__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>ÚLTIMO MÊS</label>
</ListView>