force-app/main/default/objects/Transactions__c/listViews/Movimentos_entradas_Este_Ano.listView-meta.xml
<ListView>
    <fullName>Movimentos_entradas_Este_Ano</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Budget__c</field>
        <operation>equals</operation>
    </filters>
    <label>Movimentos entradas - Este Ano</label>
</ListView>